force-app/main/default/objects/Course_Module__c/Course_Module__c.object-meta.xml
<CustomObject>
    <label>Course Module</label>
    <nameField>
        <displayFormat>CM-{00000}</displayFormat>
        <label>Course Module Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Module</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>