force-app/main/default/objects/Course_Module__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Course Module</relationshipLabel>
    <relationshipName>Course_Module</relationshipName>
    <type>Lookup</type>
</CustomField>