force-app/main/default/objects/Course_Module__c/fields/Course_Master__c.field-meta.xml
<CustomField>
    <fullName>Course_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Master</label>
    <referenceTo>Course_Master__c</referenceTo>
    <relationshipLabel>Course Module</relationshipLabel>
    <relationshipName>Course_Module</relationshipName>
    <type>Lookup</type>
</CustomField>