force-app/main/default/objects/Course_Module__c/fields/Module_Number__c.field-meta.xml
<CustomField>
    <fullName>Module_Number__c</fullName>
    <label>Module Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>