force-app/main/default/objects/Course_Module__c/fields/Module_Type__c.field-meta.xml
<CustomField>
    <fullName>Module_Type__c</fullName>
    <label>Module Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Theory</fullName>
            </value>
            <value>
                <fullName>Practical</fullName>
            </value>
            <value>
                <fullName>Case Study</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>