force-app/main/default/objects/Course_Module__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Module_Name__c</columns>
    <columns>Module_Number__c</columns>
    <columns>Module_Type__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Completion_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>4/3/2024 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>